test/tests/stages/9_functions/valid/libraries/no_function_calls/division_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  int
  identifier(f)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  ,
  int
  identifier(c)
  ,
  int
  identifier(d)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(f)
  (
  const int(10)
  ,
  const int(2)
  ,
  const int(100)
  ,
  const int(4)
  )
  ;
  }
