test/tests/stages/9_functions/invalid_declarations/decl_params_with_same_name.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[41]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  ,
  int
  identifier(a)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  const int(1)
  ,
  const int(2)
  )
  ;
  }
  int
  identifier(foo)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  )
  {
  return
  identifier(a)
  +
  identifier(b)
  ;
  }
